Updated Research Folder

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
     "from langchain.llms import Cohere\n",
     "\n",
     "# Set API Key in environment variables\n",
-    "os.environ[\"COHERE_API_KEY\"] = \"dPlXVSswiGgW9sudLfu1z8lPAu68oGV6OMMXDSHx\"\n",
+    "os.environ[\"COHERE_API_KEY\"] = COHERE_API_KEY\n",
     "\n",
     "# Initialize the Cohere LLM\n",
     "llm = Cohere(temperature=0.4, max_tokens=500)\n",
